update description & readme

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "slack-sdk-suburi",
-  "description": "for slack development",
+  "description": "Sandbox for Slack development",
   "author": {
     "name": "grgr-dkrk"
   },
