--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,13 @@
 {
   "compilerOptions": {
+    "allowSyntheticDefaultImports": true,
     "baseUrl": "./src/",
     "outDir": "dist",
     "sourceMap": true,
-    "module": "esnext",
+    "module": "commonjs",
     "moduleResolution": "node",
     "target": "es5",
     "lib": ["es5", "es6", "es7", "es2018", "dom"],
-    "jsx": "react",
     "allowJs": true,
     "strict": true,
     "removeComments": true,
