--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
   },
   "devDependencies": {
     "@secretlint/secretlint-rule-slack": "^2.1.0",
-    "@slack/web-api": "^5.10.0",
     "@types/inquirer": "^6.5.0",
     "@types/jest": "^26.0.4",
     "@types/node": "^14.0.23",
@@ -34,15 +33,9 @@
     "typescript": "^3.9.6"
   },
   "dependencies": {
+    "@slack/bolt": "^2.1.1",
+    "@slack/web-api": "^5.10.0",
     "inquirer": "^7.3.2",
     "ts-node": "^8.10.2"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "*": "secretlint"
   }
 }
