--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,6 +22,9 @@ jobs:
       - name: Lint
         run: yarn lint
 
+      - name: Lint Secret
+        run: yarn lint:secret
+
       - name: Test
         env:
           SLACK_BOT_TOKEN: xoxo-dummy-1234
