--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
   },
   "devDependencies": {
     "@secretlint/secretlint-rule-slack": "^2.1.0",
+    "@types/dotenv": "^8.2.0",
     "@types/inquirer": "^6.5.0",
     "@types/jest": "^26.0.4",
+    "@types/minimist": "^1.2.0",
     "@types/node": "^14.0.23",
     "@typescript-eslint/eslint-plugin": "^3.6.1",
     "@typescript-eslint/parser": "^3.6.1",
@@ -35,7 +37,9 @@
   "dependencies": {
     "@slack/bolt": "^2.1.1",
     "@slack/web-api": "^5.10.0",
+    "dotenv": "^8.2.0",
     "inquirer": "^7.3.2",
+    "minimist": "^1.2.5",
     "ts-node": "^8.10.2"
   }
 }
