--- a/tsconfig.lambda.json
+++ b/tsconfig.lambda.json
@@ -6,7 +6,7 @@
     "sourceMap": true,
     "module": "commonjs",
     "moduleResolution": "node",
-    "target": "es5",
+    "target": "es6",
     "lib": ["es5", "es6", "es7", "es2018"],
     "allowJs": true,
     "strict": true,
@@ -16,6 +16,6 @@
     "experimentalDecorators": true,
     "skipLibCheck": true
   },
-  "include": ["./src/**/*"],
-  "exclude": ["dist", "node_modules", "./src/specs/**/*"]
+  "include": ["./lambda/**/*"],
+  "exclude": ["dist", "node_modules", "./src/**/*"]
 }
